make stream java 8 compatible